[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/scenes/titlescreen/settings.gd" type="Script" id=1]

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resolution_label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -328.0
margin_right = 374.0
margin_bottom = -264.0
text = "Viewport Resolution: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resolution_option" type="OptionButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 376.0
margin_top = -328.0
margin_right = 656.0
margin_bottom = -264.0
text = "2560x1440 [16x9]"
items = [ "1280x1024 [5:4]", null, false, 0, false, "1280x720 [16:9]", null, false, 0, false, "1920x1080 [16:9]", null, false, 0, false, "2560x1440 [16x9]", null, false, 0, false, "3840 x 2160 [16:9]", null, false, 4, null ]
selected = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreen" type="CheckButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -256.0
margin_right = 328.0
margin_bottom = -192.0
text = "FullScreen:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sensitivity_label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -192.0
margin_right = 496.0
margin_bottom = -128.0
text = "Sensitivity: xx"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sensitivity_slider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -136.0
margin_right = 496.0
margin_bottom = -120.0
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.05
tick_count = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoped_label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -120.0
margin_right = 496.0
margin_bottom = -56.0
text = "Multiplier: xx"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoped_slider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -64.0
margin_right = 496.0
margin_bottom = -48.0
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.05
tick_count = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="apply" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -96.0
margin_right = -24.0
margin_bottom = -24.0
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -296.0
margin_top = -96.0
margin_right = -168.0
margin_bottom = -24.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="sensitivity_slider" to="." method="_on_sensitivity_changed"]
[connection signal="value_changed" from="scoped_slider" to="." method="_on_scoped_changed"]
[connection signal="button_up" from="apply" to="." method="_on_apply_pressed"]
[connection signal="button_up" from="back" to="." method="_on_back_pressed"]
